--- a/dev.ipynb
+++ b/dev.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,13 +104,16 @@
     "            bathroom_icon = property.find_element(By.CSS_SELECTOR, 'span.no-svg-bathroom-icon + span.text')\n",
     "            num_bathrooms = int(bathroom_icon.get_attribute('textContent'))\n",
     "            \n",
-    "            # If the property has at least 2 bathrooms, get the URL and add to the list\n",
-    "            if num_bathrooms >= 2:\n",
+    "            # Check if the property card mentions a floorplan\n",
+    "            floorplan_element = property.find_element(By.CSS_SELECTOR, 'a[data-test=\"property-floorplan-icon\"]')\n",
+    "            \n",
+    "            # If the property has at least 2 bathrooms and a floorplan, get the URL and add to the list\n",
+    "            if num_bathrooms >= 2 and floorplan_element:\n",
     "                property_url_element = property.find_element(By.CSS_SELECTOR, 'a.propertyCard-link')\n",
     "                property_url = property_url_element.get_attribute('href')\n",
     "                property_urls.append(property_url)\n",
     "        except NoSuchElementException:\n",
-    "            # If the bathroom element is not found, skip this property\n",
+    "            # If the bathroom element or floorplan is not found, skip this property\n",
     "            continue\n",
     "\n",
     "    # Check if the \"Next\" button is disabled\n",
@@ -125,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,171 +138,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['https://www.rightmove.co.uk/properties/142243013#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143162135#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143161874#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/141550130#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143161583#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143161526#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143161043#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/140462768#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143160653#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143160581#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143160545#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143159918#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143350943#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143158385#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/142997540#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143158022#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143157242#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143242085#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143156138#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143156093#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143156048#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143155586#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143154632#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143154074#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/142254233#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143152646#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143151803#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143151170#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143362256#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143148257#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/141989168#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/142331141#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143147777#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143147540#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/140981261#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143298902#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143143472#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143142728#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143141651#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143140421#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143138747#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143350865#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143138603#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143138546#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143138522#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/142707461#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/142478936#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143137214#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143137184#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143136374#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143134562#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143242085#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143131199#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143131169#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/80122683#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143130548#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143283074#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/129445808#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/142285394#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143129927#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/142760057#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143129579#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143332730#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/142568579#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143125835#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143317250#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143126174#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143126033#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143125583#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143123819#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143123690#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/142866101#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143121290#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143120771#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143119439#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143119013#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143118032#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/142257563#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143114588#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143112356#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143111978#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/111965540#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143111120#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/135439004#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/142001054#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143109758#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143109488#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143108867#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143108432#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143107778#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143107775#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143106683#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143105999#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143105837#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143104418#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143104109#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/141732074#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143103365#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143103005#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143102762#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143101748#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143101652#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143100836#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143100458#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/142545131#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/141839318#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143098460#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143097935#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/142573670#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143096441#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143096447#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143095493#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/142104407#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143094863#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143094017#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143310236#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/142539419#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143089409#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143085173#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/86674005#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143083307#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/122904509#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143080433#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143080430#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143079170#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/140198246#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143077472#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143077307#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143077031#/?channel=RES_LET',\n",
-       " 'https://www.rightmove.co.uk/properties/143076311#/?channel=RES_LET']"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image downloaded and saved as floorplan.jpeg\n"
+     ]
     }
    ],
    "source": [
-    "property_urls"
+    "import requests\n",
+    "import json\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "\n",
+    "def download_image(image_url, filename):\n",
+    "    try:\n",
+    "        # Send a GET request to the image URL\n",
+    "        response = requests.get(image_url)\n",
+    "\n",
+    "        # Check if the request was successful\n",
+    "        response.raise_for_status()\n",
+    "\n",
+    "        # Write the image content to a file\n",
+    "        with open(filename, \"wb\") as file:\n",
+    "            file.write(response.content)\n",
+    "\n",
+    "        print(f\"Image downloaded and saved as {filename}\")\n",
+    "    except requests.HTTPError as http_err:\n",
+    "        print(f\"HTTP error occurred: {http_err}\")\n",
+    "    except Exception as err:\n",
+    "        print(f\"An error occurred: {err}\")\n",
+    "\n",
+    "\n",
+    "def get_floorplan_url(property_url):\n",
+    "    # Split the URL on '#'\n",
+    "    parts = property_url.split(\"#\")\n",
+    "    # Insert the floorplan segment before the '?channel=RES_LET' part\n",
+    "    floorplan_url = (\n",
+    "        parts[0] + \"#/floorplan\" + (\"?\" + parts[1] if len(parts) > 1 else \"\")\n",
+    "    )\n",
+    "    return floorplan_url\n",
+    "\n",
+    "\n",
+    "def extract_floorplan_url_from_html(html_content):\n",
+    "    # Parse the HTML content\n",
+    "    soup = BeautifulSoup(html_content, \"html.parser\")\n",
+    "\n",
+    "    # Find the script tag containing the PAGE_MODEL\n",
+    "    script_tag = soup.find(\"script\", string=lambda t: t and \"window.PAGE_MODEL\" in t)\n",
+    "\n",
+    "    # Extract the JSON string from the script tag\n",
+    "    json_string = script_tag.string.split(\"=\", 1)[1].strip()\n",
+    "\n",
+    "    # Remove the trailing semicolon if it exists\n",
+    "    json_string = json_string.rstrip(\";\")\n",
+    "\n",
+    "    # Parse the JSON string\n",
+    "    data = json.loads(json_string)\n",
+    "\n",
+    "    # Extract the floorplan URL\n",
+    "    floorplan_url = data[\"propertyData\"][\"floorplans\"][0][\"url\"]\n",
+    "\n",
+    "    return floorplan_url\n",
+    "\n",
+    "\n",
+    "url = get_floorplan_url(property_urls[0])\n",
+    "\n",
+    "headers = requests.utils.default_headers()\n",
+    "\n",
+    "headers.update(\n",
+    "    {\n",
+    "        \"User-Agent\": \"My User Agent 1.0\",\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "response = requests.get(url, headers=headers)\n",
+    "\n",
+    "floorplan_image_url = extract_floorplan_url_from_html(response.text)\n",
+    "\n",
+    "download_image(floorplan_image_url, \"floorplan.jpeg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer: 794\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pytesseract\n",
+    "from PIL import Image\n",
+    "from transformers import pipeline\n",
+    "\n",
+    "# Path to the image\n",
+    "image_path = 'floorplan.jpeg'\n",
+    "\n",
+    "# Open the image with Pillow\n",
+    "image = Image.open(image_path)\n",
+    "\n",
+    "# Use Tesseract to do OCR on the image\n",
+    "text = pytesseract.image_to_string(image)\n",
+    "\n",
+    "if text.strip():\n",
+    "\n",
+    "    # Load a pre-trained question-answering model from Hugging Face\n",
+    "    qa_pipeline = pipeline(\"question-answering\", model=\"distilbert-base-cased-distilled-squad\")\n",
+    "\n",
+    "    # The question we want to answer (i.e., what we want to extract)\n",
+    "    question = \"What is the total gross internal area in square feet?\"\n",
+    "\n",
+    "    # Use the model to find the answer\n",
+    "    result = qa_pipeline(question=question, context=text)\n",
+    "\n",
+    "    # Print the answer\n",
+    "    print(\"Answer:\", result[\"answer\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "130"
+       "''"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(property_urls)"
+    "text"
    ]
   },
   {
